<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_ip_title" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/ip_edt_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ip_edt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="@string/ip_style"
            android:gravity="center_vertical|center"
            android:hint="@string/input_ip_hint"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>
</LinearLayout>